# hierarchy

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: High-Level-Design.md  Implementation-Plan.md  api.md  manual.md  structure.txt
example/: .gitignore
hierarchy/: app.py  directory_tree.py  gitignore_handler.py  main.py  tree_node.py  zip_creator.py
pdirtree/: app.py  directory_tree.py  gitignore_handler.py
tests/: test_directory_tree.py  test_file_system_errors.py  test_gitignore_handler.py
