[tool.poetry]
name = "hierarchy"
version = "0.1.0"
description = "A tool to print directory hierarchy and create a zip file, respecting .gitignore rules."
authors = ["Philip Dye <phdye@acm.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
docopt = "^0.6.2"
gitignore-parser = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
